--- a/nemea/ios/Runner/Info.plist
+++ b/nemea/ios/Runner/Info.plist
@@ -28,7 +28,11 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>UISupportedInterfaceOrientations</key>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app requires access to your location while in use.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app requires access to your location at all times.</string>
+    <key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
